@@ -9,11 +9,6 @@
  * Implements hook_workflow().
  */
 function workflownode_workflow($op, $id, $new_sid, $entity, $force, $entity_type = '', $field_name = '') {
-  // This hook is only valid for Workflow Node, so $field_name must be empty.
-  if ($field_name) {
-    return;
-  }
-
   switch ($op) {
     case 'transition permitted':
       // The workflow module does nothing during this operation.
@@ -37,8 +32,31 @@ function workflownode_workflow($op, $id, $new_sid, $entity, $force, $entity_type
       break;
 
     case 'state delete':
-      // Only the first parameter is used.
-      $sid = $id;
+      $current_sid = $id;
+      // Re-parent any nodes that we don't want to orphan, whilst deactivating a State.
+      // This is called in WorkflowState::deactivate().
+      if ($new_sid) {
+        global $user;
+        // A candidate for the batch API.
+        // @TODO: Future updates should seriously consider setting this with batch.
+        $node = new stdClass();
+        $node->workflow_stamp = REQUEST_TIME;
+        foreach (workflow_get_workflow_node_by_sid($current_sid) as $data) {
+          $node->nid = $data->nid;
+          $node->workflow = $current_sid;
+          $data = array(
+            'nid' => $node->nid,
+            'sid' => $new_sid,
+            'uid' => $user->uid,
+            'stamp' => $node->workflow_stamp,
+          );
+          workflow_update_workflow_node($data, $current_sid, t('Previous state deleted'));
+        }
+      }
+
+      // Delete any lingering node to state values.
+      workflow_delete_workflow_node_by_sid($current_sid);
+
       break;
 
     case 'workflow delete':
